Improve code [hash]